Fixed width for mobile devices, updated header font, added story horizontal scroll bar, other misc changes

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+/* TODO:  Double check colors
+          Update icons to be buttons*/
+
 body * {
     box-sizing: border-box;
 }
@@ -15,25 +18,39 @@ a:visited { text-decoration: none; }
 a:hover { text-decoration: none; }
 a:active { text-decoration: none; }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Comfortaa', cursive;
+}
+
 /* Define the rules for the entire header */
 .header, .header * {
     /* border: solid 1px black; */
+    /* display: flex; */
+    /* width: 100%; */
+}
+
+.header {
     display: flex;
-    width: 100%;
 }
 
 /* Define the outer padding of the navigation bar */
 .navigationbar {
+    display: flex;
     position: fixed;
     width: 100%;
+    /* width: max-content; */
     min-width: 300px;
-    padding: 10px;
+    /* padding: 10px; */
+    padding: 10px 30px;
     background-color: white;
     /* border-bottom: solid 1px black; */
 }
 
 /* Define the rules for the left component of the header */
 .leftheader {
+    display: flex;
+    /* width: 100%; */
+    min-width: max-content;
     font-size: x-large;
     font-weight: bold;
     align-items: center;
@@ -44,8 +61,15 @@ a:active { text-decoration: none; }
     color: purple;
 }
 
+.logo {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
 /* Define the size of the box for the items in the right component of the header */
 .rightheader {
+    display: flex;
+    width: 100%;
     justify-content: flex-end;
     align-items: center;
 }
@@ -77,8 +101,8 @@ a:active { text-decoration: none; }
     display: flex;
     flex-direction: column;
     /* background-color: #f2f2f2; */
-    width: 65%;
-    align-items: center;
+    width: 60%;
+    align-items: flex-end;
 }
 
 .stories {
@@ -86,6 +110,7 @@ a:active { text-decoration: none; }
     flex-direction: row;
     background-color: white;
     width: 600px;
+    overflow: auto;
 }
 
 .astory {
@@ -94,16 +119,24 @@ a:active { text-decoration: none; }
     align-items: center;
     padding: 5px;
     margin: 5px;
+    width: 100px;
 }
 
 .astoryname {
+    width: 100%;
     margin-top: 5px;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
+    font-size: small;
+    color: gray;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .astory img {
-    border: 5px solid lightgray;
+    border: 3px solid lightgray;
+    width: 65px;
+    height: 65px;
 }
 
 .card {
@@ -117,12 +150,13 @@ a:active { text-decoration: none; }
 .cardtop {
     display: flex;
     justify-content: space-between;
+    padding: 5px;
 }
 
 .postuser, .moreicon {
     width: min-content;
     margin: 10px;
-    font-size: x-large;
+    font-size: large;
 }
 
 .cardimage {
@@ -161,15 +195,17 @@ a:active { text-decoration: none; }
 }
 
 .cardnumlikes {
-    margin: 5px;
-    padding: 5px;
+    margin: 10px;
+    padding: 10px;
+    margin-top: 0px;
+    padding-top: 0px;
     font-weight: bold;
 }
 
 .cardcaptionsection, .cardcommentsection {
-    margin: 0px 5px;
-    padding: 0px 5px;
-    padding-right: 10px;
+    margin: 0px 10px;
+    padding: 0px 10px;
+    /* padding-right: 10px; */
     flex-direction: column;
 }
 
@@ -191,6 +227,7 @@ a:active { text-decoration: none; }
 .timesincepost {
     margin-top: 10px;
     padding: 2px;
+    font-size: small;
     color: gray;
 }
 
@@ -209,6 +246,7 @@ a:active { text-decoration: none; }
 
 .input {
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .addnewcomment i {
@@ -227,12 +265,12 @@ a:active { text-decoration: none; }
 .rightapp {
     display: flex;
     flex-direction: column;
-    padding: 5px;
+    padding: 10px;
     /* width: 500px; */
-    width: 35%;
+    /* width: 35%; */
     position: fixed;
     /* left: 900px; */
-    left: 65%;
+    left: 60%;
 }
 
 .profilepic {
@@ -253,7 +291,7 @@ a:active { text-decoration: none; }
 }
 
 .user h1 {
-    margin: 5px;
+    margin: 10px;
     width: min-content;
 }
 
@@ -305,6 +343,20 @@ a:active { text-decoration: none; }
 }
 
 @media only screen and (max-width: 1000px) {
-    .mainsection {justify-content: center;}
+    .body {width: 100%;}
+    .header {width: 100% }
+    .mainsection { 
+        justify-content:space-around;
+    }
     .rightapp {display: none;}
+    /* .leftapp {width: 100%;} */
+    .stories {justify-content: flex-start;}
+    .card {width: 100%;}
+    .stories {width: 100%;}
+    .postpic {width: 100%;}
+}
+
+@media only screen and (max-width: 750px) {
+    .leftapp {width: 100%;}
+    /* .leftapp {align-items: stretch;} */
 }
